objects/IATSPayment__iATS_Debit_Return__c.object
<CustomObject>
    <customHelpPage>IATSPayment__iATSPayment_Returns_Help</customHelpPage>
    <fields>
        <fullName>IATSPayment__ACH_Account_Number__c</fullName>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__BACS_Report_Type_UK__c</fullName>
        <inlineHelpText>More information on UK BACS Returns is available via &apos;Help for this Page&apos; link.</inlineHelpText>
        <label>BACS Report Type (UK)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Currency_del__c</fullName>
        <formula>TEXT(IATSPayment__iATS_Account_del__r.IATSPayment__Currency__c)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Journal_ID__c</fullName>
        <label>Journal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__New_Amount__c</fullName>
        <label>New Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Original_Transaction_Date__c</fullName>
        <label>Original Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Account_Number__c</fullName>
        <label>Payer Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Name__c</fullName>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_New_Name__c</fullName>
        <label>Payer New Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_New_Sort_Code__c</fullName>
        <label>Payer New Sort Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payers_New_Account_Number__c</fullName>
        <label>Payer New Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payers_Sort_Code__c</fullName>
        <label>Payer Sort Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Reason_Code__c</fullName>
        <inlineHelpText>More information on UK BACS Returns is available via &apos;Help for this Page&apos; link.</inlineHelpText>
        <label>Return Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Reason_Desc__c</fullName>
        <inlineHelpText>More information on UK BACS Returns is available via &apos;Help for this Page&apos; link.</inlineHelpText>
        <label>Return Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Return_Amount__c</fullName>
        <label>Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATSPayment__UK_BACS_ID__c</fullName>
        <displayFormat>UKBACS-{000000}</displayFormat>
        <label>UK BACS ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IATSPayment__iATS_Account_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>iATS Account</label>
        <referenceTo>IATSPayment__IATS_Account__c</referenceTo>
        <relationshipName>iATS_Debit_Returns_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__iATS_Customer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>iATS Customer Code</label>
        <referenceTo>IATSPayment__IATS_Customer_Code__c</referenceTo>
        <relationshipName>iATS_Debit_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__iATS_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>iATS Transaction</label>
        <referenceTo>IATSPayment__Transaction__c</referenceTo>
        <relationshipName>iATS_Debit_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>iATS Return</label>
    <listViews>
        <fullName>IATSPayment__All</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Return_Amount__c</columns>
        <columns>IATSPayment__Return_Date__c</columns>
        <columns>IATSPayment__Reason_Code__c</columns>
        <columns>IATSPayment__Reason_Desc__c</columns>
        <columns>IATSPayment__iATS_Transaction__c</columns>
        <columns>IATSPayment__BACS_Report_Type_UK__c</columns>
        <columns>IATSPayment__Reference_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IATSPayment__Effective_Date__c</columns>
        <columns>IATSPayment__Original_Transaction_Date__c</columns>
        <columns>IATSPayment__iATS_Account_del__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Return ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iATS Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>